# GRPCchat

./: README.md  docker-compose.yml
grpc/: CMakeLists.txt  Dockerfile  Makefile  client.js  grpc_server.cpp
grpc/cgen/: chat.grpc.pb.cc  chat.grpc.pb.h  chat.pb.cc  chat.pb.h
grpc/jgen/: chat_grpc_pb.d.ts  chat_grpc_pb.js  chat_pb.d.ts  chat_pb.js
grpc/protos/: chat.proto
grpc/src/: chat.html  index.html
grpc/src/JS/: chat.js  index.js
grpc/src/css/: style.css
grpc/tools/: build.sh  grpc_cpp.sh
mysql/db/grpcdata/: chatdata.ibd
mysql/initdb.d/: init.sql
